<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_TimeMeter" Id="{178b2916-9075-4d70-a47b-e3a34c65b415}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	enableTimeCount: BOOL;
	resetTimeCount: BOOL;
	currTaskTime:LREAL;
END_VAR
VAR_GLOBAL PERSISTENT
	hourCounting:LREAL;//
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>